--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -7,4 +7,4 @@
   <% end %>
 </script>
 
-<div id="root">Something is supposed to be here</div>
+<div id="root">Something is supposed to be here ¯\_(ツ)_/¯</div>
