--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+header {
+  padding: 20px;
+  padding-left: 60px;
+  padding-right: 60px;
+  border-bottom: 1px solid lightgrey;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: Arial;
+}
+
+a {
+  font-weight: bold;
+  text-decoration: none;
+  margin-left: 5px;
+}
