Additional styling for header, finish modal styling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,18 @@
  *= require_tree .
  *= require_self
  */
+
+ a {
+   font-weight: normal;
+   color: rgb(50, 100, 255);
+   text-decoration: none;
+   margin-left: 5px;
+ }
+
+ a:hover {
+   color: rgb(50, 200, 100);
+ }
+
+ a:focus {
+   outline: none;
+ }
