--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -16,13 +16,12 @@ header {
 header h1 {
   font-size: 1.5em;
   color: rgb(50, 100, 255);
-  // font-family: 'Titillium Web', sans-serif;
   font-family: 'Megrim', cursive;
-  font-weight: 100;
+  font-weight: normal;
 }
 
 a {
-  font-weight: 100;
+  font-weight: normal;
   color: rgb(50, 100, 255);
   text-decoration: none;
   margin-left: 5px;
