--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -2,11 +2,18 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.outerNav {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  border-bottom: 1px solid lightgrey;
+}
+
 header {
   padding: 20px;
   padding-left: 60px;
   padding-right: 60px;
-  border-bottom: 1px solid lightgrey;
+  width: 1000px;
   display: flex;
   justify-content: space-between;
   align-items: center;
