--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -2,11 +2,16 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+body {
+  background-color: white //rgb(250, 250, 250)
+}
+
 .outerNav {
   display: flex;
   justify-content: center;
   width: 100%;
   border-bottom: 1px solid lightgrey;
+  background-color: white;
 }
 
 header {
@@ -23,8 +28,8 @@ header {
 header h1 {
   font-size: 1.5em;
   color: rgb(50, 100, 255);
-  font-family: 'Megrim', cursive;
-  font-weight: normal;
+  font-family: 'Megrim', 'Titillium Web', sans-serif;
+  font-weight: 100;
 }
 
 a {
