--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -32,11 +32,8 @@ header h1 {
   font-weight: 100;
 }
 
-a {
-  font-weight: normal;
-  color: rgb(50, 100, 255);
-  text-decoration: none;
-  margin-left: 5px;
+.login-signup a {
+  margin-left: 15px;
 }
 
 a:hover, .logo:hover {
