Create feed components, increase header font size

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -26,7 +26,7 @@ header {
 }
 
 header h1 {
-  font-size: 1.5em;
+  font-size: 1.75em;
   color: rgb(50, 100, 255);
   font-family: 'Megrim', 'Titillium Web', sans-serif;
   font-weight: 100;
@@ -34,6 +34,7 @@ header h1 {
 
 .login-signup a {
   margin-left: 15px;
+  font-size: 18px;
 }
 
 a:hover, .logo:hover {
