--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
   <link href="https://fonts.googleapis.com/css?family=Megrim|Titillium+Web:200" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:700" rel="stylesheet">
 </head>
 <body>
 
