Create preliminary story view, fix login modal popping up inappropriately

--- a/app/assets/stylesheets/api/stories.scss
+++ b/app/assets/stylesheets/api/stories.scss
@@ -54,3 +54,13 @@
   font-size: 16px;
   color: black;
 }
+
+.story h1 {
+  font-family: 'PT Sans';
+  font-size: 4em;
+  font-weight: bold;
+}
+
+.story img {
+  width: 1000px;
+}
