Begin preliminary styling of story view, add delete button, back button

--- a/app/assets/stylesheets/api/stories.scss
+++ b/app/assets/stylesheets/api/stories.scss
@@ -55,9 +55,14 @@
   color: black;
 }
 
+.story {
+  width: 1000px;
+  margin: 0 auto;
+}
+
 .story h1 {
   font-family: 'PT Sans';
-  font-size: 4em;
+  font-size: 3.5em;
   font-weight: bold;
 }
 
