Fix modal url bug by removing modal urls entirely, add dummy link class

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -32,12 +32,12 @@ header h1 {
   font-weight: 100;
 }
 
-.login-signup a {
+.login-signup .link {
   margin-left: 15px;
   font-size: 18px;
 }
 
-a:hover, .logo:hover {
+.logo:hover {
   color: rgb(50, 235, 160);
 }
 
