Minor style fixes

--- a/app/assets/stylesheets/api/stories.scss
+++ b/app/assets/stylesheets/api/stories.scss
@@ -15,10 +15,9 @@
   width: 600px;
   height: 440px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  animation: 0.75s fadeInFromTop;
 }
 
-@keyframes fadeInFromTop {
+@keyframes fadeInFromBottom {
   0% { transform: translateY(50px); opacity: 0 }
   100% { transform: translateY(0); opacity: 1 }
 }
