More style fixes

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body {
-  background-color: rgb(250, 250, 250)
+  background-color: white//rgb(250, 250, 250)
 }
 
 .outerNav {
