--- a/app/assets/stylesheets/api/stories.scss
+++ b/app/assets/stylesheets/api/stories.scss
@@ -11,9 +11,10 @@
 }
 
 .feedItem {
+  margin-bottom: 100px;
   display: inline-block;
-  width: 600px;
-  height: 440px;
+  width: 1000px;
+  height: 700px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -24,20 +25,20 @@
 
 .feedItem .description {
   position: static;
-  margin-top: 360px;
+  margin-top: 600px;
   margin-left: 30px;
 }
 
 .feedItem .imageContainer {
   position: absolute;
-  width: 600px;
-  height: 336px;
+  width: 1000px;
+  height: 560px;
   overflow: hidden;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .feedItem img {
-  width: 600px;
+  width: 1000px;
 }
 
 .description h2 {
