--- a/app/assets/stylesheets/api/stories.scss
+++ b/app/assets/stylesheets/api/stories.scss
@@ -23,10 +23,19 @@
   100% { transform: translateY(0); opacity: 1 }
 }
 
+.storyInfo {
+  margin-top: 560px;
+  padding-top: 40px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 40px;
+  display:flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
 .feedItem .description {
   position: static;
-  margin-top: 600px;
-  margin-left: 30px;
 }
 
 .feedItem .imageContainer {
@@ -41,8 +50,13 @@
   width: 1000px;
 }
 
-.description h2 {
+.feedItem .author {
   font-size: 20px;
+  text-align: right;
+}
+
+.description h2 {
+  font-size: 32px;
   font-weight: 700;
   font-family: 'PT Sans';
   color: black;
@@ -51,7 +65,7 @@
 .description span {
   display: block;
   margin-top: 10px;
-  font-size: 16px;
+  font-size: 18px;
   color: black;
 }
 
@@ -60,7 +74,8 @@
   margin: 0 auto;
   padding: 40px;
   background-color: white;
-  // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  font-family: 'Georgia';
+  font-size: 20px;
 }
 
 .story h1 {
@@ -101,7 +116,7 @@
 .story p, .story span {
   width: 700px;
   margin: 0 auto;
-  font-size: 20px;
+  font-size: 24px;
 }
 
 .story .body {
