Add default post image

--- a/app/assets/stylesheets/api/stories.scss
+++ b/app/assets/stylesheets/api/stories.scss
@@ -40,6 +40,7 @@
 
 .feedItem .imageContainer {
   position: absolute;
+  background-color: grey;
   width: 1000px;
   height: 560px;
   overflow: hidden;
