Style story form component, add header

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -32,6 +32,10 @@ header h1 {
   font-weight: 100;
 }
 
+.greeting {
+  font-size: 18px;
+}
+
 .login-signup .link {
   margin-left: 15px;
   font-size: 18px;
@@ -51,6 +55,7 @@ header h1 {
 
 .write-story {
   margin-right: 30px;
+  font-size: 18px;
   color: grey;
 }
 
