--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -26,19 +26,21 @@ header {
 }
 
 header h1 {
-  font-size: 1.75em;
+  font-size: 3em;
   color: rgb(50, 100, 255);
   font-family: 'Megrim', 'Titillium Web', sans-serif;
-  font-weight: 100;
+  font-weight: 700;
 }
 
 .greeting {
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .login-signup .link {
   margin-left: 15px;
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .logo:hover {
@@ -55,7 +57,8 @@ header h1 {
 
 .write-story {
   margin-right: 30px;
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: bold;
   color: grey;
 }
 
