--- a/app/assets/stylesheets/api/forms.scss
+++ b/app/assets/stylesheets/api/forms.scss
@@ -2,6 +2,7 @@
   width: 700px;
   margin: 0 auto;
   font-size: 20px;
+  font-weight: bold;
 }
 
 .storyForm h1 {
@@ -16,6 +17,7 @@
   height: 35px;
   font-size: 20px;
   font-family: 'Titillium Web';
+  font-weight: bold;
   padding: 10px;
   padding-left: 20px;
   padding-right: 20px;
@@ -30,7 +32,8 @@
   width: 660px;
   height: 350px;
   font-family: 'Titillium Web';
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: bold;
   border: 2px solid lightgrey;
   border-radius: 10px;
 }
