Add figaro, fix navbar to top, revise seeds

--- a/app/assets/stylesheets/api/forms.scss
+++ b/app/assets/stylesheets/api/forms.scss
@@ -1,6 +1,7 @@
 .storyForm {
   width: 700px;
   margin: 0 auto;
+  margin-top: 90px;
   font-size: 20px;
   font-weight: bold;
 }
@@ -51,7 +52,7 @@
 }
 
 .storyForm .link {
-  font-size: 20px;
+  font-size: 22px;
   display: block;
   text-align: right;
 }
