--- a/app/assets/stylesheets/api/forms.scss
+++ b/app/assets/stylesheets/api/forms.scss
@@ -2,6 +2,7 @@
   width: 700px;
   margin: 0 auto;
   margin-top: 90px;
+  margin-bottom: 70px;
   font-size: 20px;
   font-weight: bold;
 }
@@ -18,9 +19,22 @@
   margin-top: 20px;
 }
 
+.storyForm .imgUpload p {
+  height: 22px;
+  font-size: 20px;
+  text-align: left;
+}
+
+.storyForm .imgPreview img {
+  display: block;
+  margin-bottom: 10px;
+  margin-right: auto;
+  width: 700px;
+}
+
 .storyForm input {
   margin-top: 10px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   width: 660px;
   height: 35px;
   font-size: 20px;
@@ -31,6 +45,11 @@
   padding-right: 20px;
   border: 2px solid lightgrey;
   border-radius: 10px;
+}
+
+.storyForm body {
+  position: relative;
+  top: -5px;
 }
 
 .storyForm textarea {
