--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,13 @@
   <%= csrf_meta_tags %>
   <link href="https://fonts.googleapis.com/css?family=Megrim|Titillium+Web:200" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:700" rel="stylesheet">
+  <script src="http://widget.cloudinary.com/global/all.js"></script>
+  <script type="text/javascript">
+    window.cloudinaryOptions = {
+      cloudName: '<%= ENV['CLOUD_NAME']%>',
+      uploadPreset: '<%= ENV['UPLOAD_PRESET']%>'
+    };
+  </script>
 </head>
 <body>
 
