Adjust image upload link alignment

--- a/app/assets/stylesheets/api/forms.scss
+++ b/app/assets/stylesheets/api/forms.scss
@@ -22,7 +22,7 @@
 .storyForm .imgUpload p {
   height: 22px;
   font-size: 20px;
-  text-align: left;
+  text-align: right;
 }
 
 .storyForm .imgPreview img {
