Improve error display on story form

--- a/app/assets/stylesheets/api/forms.scss
+++ b/app/assets/stylesheets/api/forms.scss
@@ -13,6 +13,11 @@
   top: 8px;
 }
 
+.storyForm .errors {
+  font-size: 20px;
+  margin-top: 20px;
+}
+
 .storyForm h1 {
   font-family: "PT Sans";
   text-align: center;
