--- a/app/assets/stylesheets/api/stories.scss
+++ b/app/assets/stylesheets/api/stories.scss
@@ -131,17 +131,13 @@
 }
 
 .story img {
-  margin-left: auto;
-  margin-right:auto;
-  width: 850px;
+  display: block;
+  position: relative;
+  left: 7px;
+  margin: 0 auto;
+  width: 900px;
   overflow: hidden;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.story img {
-  display: block;
-  margin: 0 auto;
-  width: 850px;
 }
 
 .story .authorWidget {
