Adjust global zoom level and feed zoom

--- a/app/assets/stylesheets/api/stories.scss
+++ b/app/assets/stylesheets/api/stories.scss
@@ -12,6 +12,7 @@
   margin: 0 auto;
   margin-top: 175px;
   font-family: 'Titillium Web';
+  zoom: 0.9;
 }
 
 .feedItem {
@@ -135,7 +136,7 @@
   position: relative;
   left: 7px;
   margin: 0 auto;
-  width: 900px;
+  width: 850px;
   overflow: hidden;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
