--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -1,3 +1,67 @@
 // Place all the styles related to the Api::Comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.comments {
+  background-color: #fafafa;
+  padding-top: 80px;
+  padding-bottom: 50px;
+}
+
+.responses-header {
+  display: block;
+  width: 632px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  font-family: 'PT Sans';
+  font-size: 16px;
+  color: grey;
+}
+
+.avatar {
+  width: 48px;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.comment {
+  margin: 0 auto;
+  margin-bottom: 20px;
+  width: 570px;
+  min-height: 100px;
+  padding-top: 20px;
+  padding-bottom: 25px;
+  padding-left: 30px;
+  padding-right: 30px;
+  border: 1px solid lightgrey;
+  border-radius: 2px;
+  background-color: white;
+}
+
+.userInfo {
+  display: flex;
+  align-items: center;
+}
+
+.userInfo div {
+  margin-left: 10px;
+}
+
+.userInfo .username {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.userInfo .date {
+  padding-top: 5px;
+  font-size: 12px;
+  color: grey;
+  font-weight: bold;
+}
+
+.comment p {
+  margin-top: 20px;
+  font-family: Georgia;
+  font-size: 20px;
+  font-weight: normal;
+}
