--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -4,7 +4,7 @@
 
 .comments {
   background-color: #fafafa;
-  padding-top: 40px;
+  padding: 40px;
   padding-bottom: 50px;
 }
 
@@ -57,6 +57,8 @@
   font-size: 20px;
   font-family: Georgia;
   border: none;
+  resize: none;
+  overflow: hidden;
 }
 
 .commentForm textarea:focus {
@@ -124,10 +126,23 @@
 }
 
 .comment .editForm {
-  height: auto;
+  position: relative;
+  margin-top: 18px;
+  left: -2px;
   width: 570px;
   font-family: Georgia;
   font-size: 20px;
+  line-height: 1.25;
   border: none;
   outline: none;
+}
+
+.comment .updateOptions {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.comment .update {
+  margin-left: 20px;
+  text-align: right;
 }
