--- a/app/assets/stylesheets/api/stories.scss
+++ b/app/assets/stylesheets/api/stories.scss
@@ -150,6 +150,10 @@
   text-align: center;
 }
 
+.story .authorWidget .link, .authorWidget a {
+  font-weight: normal;
+}
+
 .story figure {
   margin-top: 30px;
   margin-bottom: 40px;
