Add production README, improve fonts on Firefox

--- a/app/assets/stylesheets/api/stories.scss
+++ b/app/assets/stylesheets/api/stories.scss
@@ -119,7 +119,7 @@
 .story h3 {
   margin-top: 30px;
   padding-bottom: 20px;
-  font-family: 'Georgia';
+  font-family: Georgia, 'PT Serif', serif;
   font-size: 28px;
   text-align: center;
   color: #aaa;
@@ -128,7 +128,7 @@
 
 .story .body {
   padding-top: 20px;
-  font-family: 'Georgia';
+  font-family: Georgia, 'PT Serif', serif;
   color: #333;
 }
 
