--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -55,7 +55,7 @@
   margin-left: 15px;
   height: 39px;
   font-size: 20px;
-  font-family: Georgia;
+  font-family: Georgia, 'PT Serif', serif;
   border: none;
   resize: none;
   overflow: hidden;
@@ -119,7 +119,7 @@
 
 .comment p {
   margin-top: 20px;
-  font-family: Georgia;
+  font-family: Georgia, 'PT Serif', serif;
   font-size: 20px;
   font-weight: normal;
   line-height: 1.25;
@@ -131,7 +131,7 @@
   margin-top: 16px;
   left: -4px;
   width: 570px;
-  font-family: Georgia;
+  font-family: Georgia, 'PT Serif', serif;
   font-size: 20px;
   line-height: 1.25;
   border: 2px solid white;
