--- a/app/assets/stylesheets/api/stories.scss
+++ b/app/assets/stylesheets/api/stories.scss
@@ -97,6 +97,7 @@
   padding: 40px;
   background-color: white;
   font-size: 20px;
+  zoom: 0.9;
 }
 
 .back {
@@ -108,20 +109,22 @@
 
 .story h1 {
   font-family: 'PT Sans';
-  margin: 0 auto;
   margin-top: 20px;
-  max-width: 800px;
-  font-size: 42px;
+  max-width: 845px;
+  font-size: 50px;
   font-weight: bold;
-  text-align: center;
+  text-align: left;
+  margin: 0 auto;
+  color: #333;
 }
 
 .story h3 {
-  margin-top: 30px;
+  margin-top: 20px;
+  margin-left: 80px;
   padding-bottom: 20px;
-  font-family: Georgia, 'PT Serif', serif;
+  font-family: 'Titillium Web', sans-serif;
   font-size: 28px;
-  text-align: center;
+  text-align: left;
   color: #aaa;
   font-weight: 100;
 }
@@ -160,13 +163,13 @@
 }
 
 .story p, .story span {
-  width: 700px;
+  width: 850px;
   margin: 0 auto;
   font-size: 24px;
 }
 
 .story .body {
-  margin-top: 40px;
+  margin-top: 0px;
   margin-bottom: 60px;
   line-height: 1.5;
 }
