More styling fixes

--- a/app/assets/stylesheets/api/stories.scss
+++ b/app/assets/stylesheets/api/stories.scss
@@ -121,6 +121,7 @@
 .story h3 {
   margin-top: 20px;
   margin-left: 80px;
+  margin-right: 80px;
   padding-bottom: 20px;
   font-family: 'Titillium Web', sans-serif;
   font-size: 28px;
@@ -138,11 +139,11 @@
 .story .splashImage {
   display: block;
   position: relative;
-  left: 7px;
+  left: 0px;
   margin: 0 auto;
   width: 850px;
   overflow: hidden;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .story .authorWidget {
@@ -169,7 +170,7 @@
 }
 
 .story .body {
-  margin-top: 0px;
+  margin-top: 20px;
   margin-bottom: 60px;
   line-height: 1.5;
 }
