Yet more styling fixes

--- a/app/assets/stylesheets/api/stories.scss
+++ b/app/assets/stylesheets/api/stories.scss
@@ -126,8 +126,8 @@
   font-family: 'Titillium Web', sans-serif;
   font-size: 28px;
   text-align: left;
-  color: #aaa;
-  font-weight: 100;
+  color: #999;
+  font-weight: 600;
 }
 
 .story .body {
