--- a/app/assets/stylesheets/api/users.css
+++ b/app/assets/stylesheets/api/users.css
@@ -37,3 +37,10 @@
   border-radius: 50%;
   display: inline-block;
 }
+
+.newCommentForm .avatar {
+  flex: 0;
+  width: 48px;
+  border-radius: 50%;
+  display: inline-block;
+}
