--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
    zoom: 0.9;
    font-family: 'Titillium Web', sans-serif;
    font-weight: 100;
+   background-color: white;
  }
 
  h2 {
@@ -44,6 +45,6 @@
    color: black;
  }
 
- .comment .hidden {
+ .hidden {
    display: none;
  }
