--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
-  <link href="https://fonts.googleapis.com/css?family=Megrim|Titillium+Web:200|PT+Sans:700|PT+Serif" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Megrim|Titillium+Web:200|PT+Sans|PT+Sans:700|PT+Serif" rel="stylesheet">
   <script src="http://widget.cloudinary.com/global/all.js"></script>
   <script type="text/javascript">
   window.cloudinaryOptions = {
