--- a/app/assets/stylesheets/api/users.css
+++ b/app/assets/stylesheets/api/users.css
@@ -13,13 +13,13 @@
 .story .authorWidget {
   display: flex;
   flex-direction: row;
-  padding-top: 0px;
-  padding-bottom: 30px;
+  padding-bottom: 0px;
+  padding-top: 30px;
   padding-left: 35px;
   padding-right: 35px;
   align-items: flex-start;
   justify-content: space-between;
-  border-bottom: 1px solid #ddd;
+  border-top: 1px solid #ddd;
   border-radius: 5px;
 }
 
@@ -32,6 +32,10 @@
 
 .authorWidget .avatar {
   margin-right: 15px;
+}
+
+.avatar:hover {
+  cursor: pointer;
 }
 
 .story .authorWidget .username {
