--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,7 +41,7 @@
  }
 
  button {
-   margin-right: 5px;
+   margin-right: 10px;
    padding-top: 1px;
    padding-bottom: 1px;
    padding-left: 10px;
@@ -53,6 +53,7 @@
    font-family: 'Titillium Web';
    font-size: 18px;
    font-weight: bold;
+   zoom: 0.9;
  }
 
  button:hover {
@@ -62,8 +63,7 @@
  }
 
  button:active {
-   border-color: black;
-   color: black;
+   background-color: rgb(220, 255, 245);
  }
 
  button:focus {
