--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,13 +46,13 @@
    padding-bottom: 1px;
    padding-left: 10px;
    padding-right: 10px;
-   border: 1px solid rgb(50, 100, 255);
+   border: 2px solid rgb(50, 100, 255);
    border-radius: 5px;
    color: rgb(50, 100, 255);
    background: none;
-   font-family: 'Titillium Web';
+   font-family: 'PT Sans';
    font-size: 18px;
-   font-weight: bold;
+   font-weight: normal;
    zoom: 0.9;
  }
 
