Remove comment icon

--- a/app/assets/stylesheets/api/stories.css
+++ b/app/assets/stylesheets/api/stories.css
@@ -36,15 +36,13 @@
 }
 
 .sidebar .controls {
-  display: flex;
-  padding-top: 90px;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  display: block;
+  padding-top: 0px;
 }
 
 .sidebar img {
   padding-top: 20px;
+  margin: 0 auto;
   opacity: 0.75;
 }
 
