Add favicon, update icon hosting to cloudinary

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Megrim|Titillium+Web:200|PT+Sans|PT+Sans:700|PT+Serif" rel="stylesheet">
   <script src="http://widget.cloudinary.com/global/all.js"></script>
   <script type="text/javascript">
-  window.cloudinaryOptions = {
-    "cloudName": "<%= ENV["CLOUD_NAME"] %>",
-    "uploadPreset": "<%= ENV["UPLOAD_PRESET"]%>"
-  };
+    window.cloudinaryOptions = {
+      "cloudName": "<%= ENV["CLOUD_NAME"] %>",
+      "uploadPreset": "<%= ENV["UPLOAD_PRESET"]%>"
+    };
   </script>
-
+  <link
+    rel="shortcut icon" href="http://res.cloudinary.com/dzeqeo9b3/image/upload/v1505193605/small_favicon_di96b3.ico"
+    type="image/x-icon">
 </head>
 <body>
 
