--- a/app/assets/stylesheets/api/stories.css
+++ b/app/assets/stylesheets/api/stories.css
@@ -28,8 +28,32 @@
   align-items: center;
 }
 
+.controls-footer {
+  position: static;
+  top: 0;
+  left: 0;
+  margin: 0;
+  margin-left: 40px;
+  margin-right: 70px;
+  margin-bottom: 15px;
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .sidebar .like-count {
   padding-left: 25px;
+  font-family: 'PT Sans';
+  font-weight: bold;
+  color: grey;
+}
+
+.controls-footer .like-count {
+  position: relative;
+  top: -20px;
+  left: 15px;
   font-family: 'PT Sans';
   font-weight: bold;
   color: grey;
@@ -40,13 +64,30 @@
   padding-top: 0px;
 }
 
+.controls-footer .controls {
+  display: flex;
+  flex-direction: row;
+  flex: 7;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.controls-footer .user-controls {
+  display: flex;
+}
+
 .sidebar img {
   padding-top: 20px;
   margin: 0 auto;
   opacity: 0.75;
 }
 
-.sidebar img:hover {
+.controls-footer img {
+  padding-left: 30px;
+  opacity: 0.75;
+}
+
+.sidebar img:hover, .controls-footer img:hover {
   opacity: 1;
   cursor: pointer;
 }
