--- a/app/assets/stylesheets/api/story_forms.css
+++ b/app/assets/stylesheets/api/story_forms.css
@@ -88,6 +88,27 @@
   border-radius: 10px;
 }
 
+.storyForm .body {
+  width: 700px;
+  height: 310px;
+}
+
+.ql-editor p {
+  font-family: Georgia, 'PT Serif', serif;
+  font-size: 20px;
+  font-weight: normal;
+}
+
+/*.ql-editor p:first-child:first-letter {
+  float: left;
+  font-size: 80px;
+  line-height: 60px;
+  padding-top: 6px;
+  padding-right: 4px;
+  padding-left: 0px;
+  padding-bottom: 0px;
+}*/
+
 .storyForm input:focus {
   outline: none;
   border-bottom: 2px solid rgb(50, 245, 170);
@@ -102,4 +123,9 @@
   font-size: 22px;
   display: block;
   text-align: right;
+}
+
+.storyForm .publishLink {
+  margin-top: 45px;
+  font-size: 20px;
 }
