--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
   <link href="https://fonts.googleapis.com/css?family=Megrim|Titillium+Web:200|PT+Sans|PT+Sans:700|PT+Serif" rel="stylesheet">
+  <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
   <script src="http://widget.cloudinary.com/global/all.js"></script>
   <script type="text/javascript">
     window.cloudinaryOptions = {
